# nexus-core

./: ARCHITECTURE.md  CFOST_INFRASTRUCTURE_GUIDE.md  CHANGELOG.md  CORE_API_VERIFICATION_REPORT.md.deprecated  Cargo.toml  README.md
docs/: CLI_USAGE.md  P2P_SYNC.md
src/: error.rs  ffi.rs  lib.rs  tauri_api.rs
src/cli/: config.rs  daemon.rs  errors.rs  mod.rs  output.rs
src/cli/commands/: config.rs  daemon.rs  device.rs  init.rs  logs.rs  mod.rs  peer.rs  sync.rs  utils.rs
src/db/: operations.rs  schema.sql
src/logic/: mod.rs  sync.rs  sync_manager.rs
