[package]
name = "ahenk"
version = "0.1.0"
edition = "2021"
authors = ["Ahenk Contributors"]
license = "MIT OR Apache-2.0"
description = "Ahenk - Cross-platform database synchronization infrastructure with P2P networking, CRDT conflict resolution, and offline-first architecture"
repository = "https://github.com/kodfikirsanat/ahenk"
homepage = "https://github.com/kodfikirsanat/ahenk"
documentation = "https://docs.rs/ahenk"
readme = "README.md"
keywords = ["database", "sync", "p2p", "crdt", "offline-first"]
categories = ["database", "network-programming", "authentication", "data-structures"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    ".claude/",
    "*.log",
    "examples/",
    "scripts/",
    "tests/",
    ".cargo/",
]

[lib]
name = "ahenk"
# Support both static and dynamic linking
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", optional = true }

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
libp2p = { version = "0.56.0", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"
hex = "0.4"

# Optional Tauri support
tauri = { version = "2", optional = true }

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive", "cargo", "env"], optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5.0", optional = true }
env_logger = { version = "0.11", optional = true }
log = { version = "0.4", optional = true }
colored = { version = "2.1", optional = true }
indicatif = { version = "0.17", optional = true }
prettytable-rs = { version = "0.10", optional = true }
daemonize-me = { version = "2.0", optional = true }
sysinfo = { version = "0.30", optional = true }
qr2term = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
signal-hook = { version = "0.3", optional = true }
hostname = { version = "0.4", optional = true }
rpassword = { version = "7.3", optional = true }
ctrlc = { version = "3.4", optional = true }

# System dependencies
libc = "0.2"

[features]
default = []
cli = [
    "clap",
    "tokio",
    "toml",
    "dirs",
    "env_logger",
    "log",
    "colored",
    "indicatif",
    "prettytable-rs",
    "daemonize-me",
    "sysinfo",
    "qr2term",
    "anyhow",
    "signal-hook",
    "hostname",
    "rpassword",
    "ctrlc",
]
tauri-api = ["tauri"]

[[bin]]
name = "ahenk-cli"
path = "src/bin/ahenk-cli.rs"
required-features = ["cli"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary size
